--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,7 +1,10 @@
 @import "../assets/fonts/fonts.css";
+* {
+  box-sizing: border-box;
+}
+
 h1 {
-  font-family: Gotham Bold;
-  color: red;
+  color: #16a085;
 }
 
 /*# sourceMappingURL=main.css.map */
