--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,10 @@
 @import "../assets/fonts/fonts.css";
+@import "./colors.scss";
+
+* {
+  box-sizing: border-box;
+}
 
 h1 {
-  font-family: Gotham Bold;
-  color: red;
+  color: $green-primary;
 }
