--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,7 @@
 @import "../assets/fonts/fonts.css";
 @import "./colors.scss";
+@import "./class.scss";
 
 * {
   box-sizing: border-box;
-}
-
-h1 {
-  color: $green-primary;
 }
