--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import "../assets/fonts/fonts.css";
 @import "./colors.scss";
 @import "./class.scss";
+@import "./components.scss";
 
 * {
   box-sizing: border-box;
