--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,9 @@
 @import "./colors.scss";
 @import "./class.scss";
 @import "./components.scss";
+@import "./style.scss";
 
 * {
   box-sizing: border-box;
+  overflow-x: hidden;
 }
